fixing x overflow

--- a/src/app/comonents/footer/footer.component.css
+++ b/src/app/comonents/footer/footer.component.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     background-color:#1D2939;
     position: fixed;
     bottom: 0;
