--- a/src/app/comonents/header/header.component.css
+++ b/src/app/comonents/header/header.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 100vw;
+    width: 100%;
     background-color:#ffffff;
     align-items: center;
     height: 80px;
